3-service-jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: "jenkins1"
  namespace: "exerciselabs"
  labels:
    name: "jenkins1"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: "jenkins1"
