old.3-service-jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: "jenkins1"
  namespace: "exerciselabs"
  labels:
    name: "jenkins1"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  - port: 50000
  selector:
    app: "jenkins1"
