ingress-jenkins.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jenkins1-ingress
  namespace: exerciselabs
  annotations:
     kubernetes.io/ingress.class: "tectonic"
spec:
  rules:
    - host: jenkins1.ephico2real.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins1
              servicePort: 80
